--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     <div class="telegram-links">
       <a href="http://t.me/ejmok" target="_blank">Click Here - Telegram</a>
       <a href="http://t.me/Berlin_opBot" target="_blank">Click Here - Bot</a>
+      <a href="http://t.me/Jafok" target="_blank">Click Here - Jafok</a>
     </div>
 
     <div class="audio-player">
