--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
       background-color: #006699;
     }
 
+    .telegram-links .desc {
+      font-size: 14px;
+      margin-top: -5px;
+      color: #cccccc;
+    }
+
     .audio-player {
       margin-top: 40px;
       color: white;
@@ -134,8 +140,11 @@
 
     <div class="telegram-links">
       <a href="http://t.me/ejmok" target="_blank">Click Here - Telegram</a>
+
+      <a href="http://t.me/Jafok" target="_blank">Click Here - Brother</a>
+      <div class="desc">brother</div>
+
       <a href="http://t.me/Berlin_opBot" target="_blank">Click Here - Bot</a>
-      <a href="http://t.me/Jafok" target="_blank">Click Here - Jafok</a>
     </div>
 
     <div class="audio-player">
