--- a/index.html
+++ b/index.html
@@ -1,207 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <title>Arthur Morgan</title>
   <style>
     body {
-      background-color: #121212;
+      background-color: #1a1a1a;
       color: white;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
+      font-family: 'Tahoma', sans-serif;
+      padding: 20px;
       text-align: center;
     }
-
-    .container {
+    .story-box {
+      background-color: #2c2c2c;
+      border-radius: 10px;
       padding: 20px;
-      max-width: 800px;
-      margin: auto;
+      margin-top: 20px;
+      line-height: 2;
     }
-
-    .portrait img {
-      width: 100%;
-      max-width: 400px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-    }
-
-    .bio-box {
-      background-color: #1f1f1f;
-      border-radius: 15px;
-      padding: 20px;
+    .audio-player {
       margin-top: 30px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
     }
-
-    .section-title {
-      font-size: 24px;
-      margin-bottom: 10px;
-      color: #ffcc66;
+    audio {
+      width: 100%;
+      max-width: 500px;
     }
-
-    .telegram-links {
-      margin-top: 40px;
+    .button-row {
       display: flex;
       justify-content: center;
-      align-items: center;
-      gap: 15px;
-      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 30px;
     }
-
-    .telegram-links a {
-      background-color: #0088cc;
+    .btn-box {
+      background-color: #007bff;
       color: white;
-      padding: 12px 24px;
+      width: 150px;
+      height: 100px;
       border-radius: 10px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background-color 0.3s;
-    }
-
-    .telegram-links a:hover {
-      background-color: #006699;
-    }
-
-    .jafok-box {
       display: flex;
       flex-direction: column;
       align-items: center;
-      color: #cccccc;
-      font-size: 18px;
+      justify-content: center;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
-
-    .jafok-box small {
-      font-size: 12px;
-      color: #888888;
-    }
-
-    .audio-player {
-      margin-top: 40px;
+    .btn-box a {
       color: white;
-    }
-
-    .audio-player button {
-      padding: 10px 20px;
+      text-decoration: none;
       font-weight: bold;
-      margin-top: 10px;
-    }
-
-    .audio-player input[type="range"] {
-      width: 80%;
-      margin-top: 10px;
-    }
-
-    video {
-      width: 100%;
-      max-width: 600px;
-      margin-top: 40px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.1);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="portrait">
-      <img src="https://uploadkon.ir/uploads/30bc18_253f0eae2b92ca589534c39a0b4b4104d2.jpg" alt="Arthur Morgan">
-    </div>
 
-    <div class="bio-box">
-      <div class="section-title">Arthur Morgan's Story</div>
-      <p>
-        Arthur Morgan... a man who searched for a piece of peace in the chaos of bullets, betrayal, and bloodshed; peace he never found.
-        <br><br>
-        Born into a world too cruel to embrace an orphaned child. His father was a thief, his mother died young, and he quickly learned that kindness has no place in a merciless world. Dutch took him in, taught him to survive... at the cost of slowly hardening his heart.
-        <br><br>
-        Arthur saw himself as a bad man. One who carried out the gang's dirty work without hesitation. But behind that cold, emotionless gaze lay a buried heart—a heart still beating for love, for compassion, for forgiveness.
-        <br><br>
-        Tuberculosis not only consumed his body, but awakened his soul. Every cough, every sleepless night was a jolt pulling him out of his darkness. Maybe there was still a chance for redemption.
-        <br><br>
-        And he tried... with pain, with blood, with his final breaths. In the end, Arthur died... but not like a thief. Like a man. A man whose voice still echoes in the hearts of millions.
-      </p>
-    </div>
+  <h1>Arthur Morgan</h1>
 
-    <div class="bio-box">
-      <div class="section-title">زندگی آرتور مورگان</div>
-      <p>
-        آرتور مورگان... مردی که در هیاهوی گلوله‌ها، خیانت‌ها و خون‌ریزی‌ها، به دنبال تکه‌ای از آرامش می‌گشت؛ آرامشی که هرگز نیافت.
-        <br><br>
-        او در دنیایی به دنیا آمد که بی‌رحم‌تر از آن بود که کودک یتیمی را در آغوش بگیرد. پدرش یک دزد بود، مادرش را زود از دست داد، و خیلی زود یاد گرفت که دنیا برای کسانی که مهربانند، رحم نمی‌کند. داچ او را به سرپرستی گرفت، به او یاد داد چطور زنده بماند... اما به بهای اینکه قلبش را آرام آرام سنگ کند.
-        <br><br>
-        آرتور خودش را یک مرد بد می‌دانست. کسی که کارهای کثیف باند را بی‌هیچ تردیدی انجام می‌داد. اما پشت آن نگاه سرد و بی‌احساس، قلبی دفن‌شده بود؛ قلبی که هنوز برای عشق، برای دوست‌داشتن، برای بخشیدن می‌تپید.
-        <br><br>
-        بیماری سل نه‌تنها بدنش را خورد، بلکه ذهنش را نیز باز کرد. هر سرفه، هر شب بیداری، تلنگری شد که او را از دنیای تاریک خود بیرون بکشد. شاید هنوز هم فرصتی برای رستگاری بود.
-        <br><br>
-        و او تلاش کرد... با درد، با خون، با نفس‌های آخرش. در نهایت، آرتور مُرد... اما نه مثل یک دزد. مثل یک مرد. مردی که در سکوت جان داد، اما صدایش در قلب میلیون‌ها نفر زنده ماند.
-      </p>
-    </div>
+  <div class="story-box">
+    <p>
+      Arthur Morgan... a man who, amidst bullets, betrayals, and bloodshed, sought a fragment of peace; a peace he never found.
+      <br><br>
+      He was born into a world too cruel to embrace an orphaned child. His father was a thief, his mother died early, and he soon learned that the world has no mercy for the kind-hearted. Dutch adopted him, taught him how to survive… but at the cost of slowly hardening his heart.
+      <br><br>
+      Arthur saw himself as a bad man. Someone who carried out the gang's dirty work without hesitation. But behind that cold, emotionless stare, there lay a buried heart—a heart that still beat for love, for caring, for forgiveness.
+      <br><br>
+      Tuberculosis didn’t just eat away at his body—it awakened his mind. Every cough, every sleepless night, was a wake-up call pulling him out of his dark world. Maybe, just maybe, redemption was still possible.
+      <br><br>
+      And he tried… with pain, with blood, with his final breaths. In the end, Arthur died… but not like a thief. Like a man. A man who passed in silence, but whose voice lives on in the hearts of millions.
+    </p>
 
-    <div class="telegram-links">
-      <a href="https://t.me/YOUR_TELEGRAM_ID" target="_blank">My Telegram</a>
+    <hr style="margin: 30px 0; border-color: #444;">
 
-      <div class="jafok-box">
-        Jafok
-        <small>brother</small>
-      </div>
-
-      <a href="https://t.me/YOUR_BOT_ID" target="_blank">Bot</a>
-    </div>
-
-    <div class="audio-player">
-      <audio id="bgMusic" loop>
-        <source src="https://uploadkon.ir/uploads/eaf818_25may-i-stand-unshaken-banda-sonora-subtitulada-red-dead-redemption.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio>
-
-      <button onclick="togglePlay()">🎵 Play / Pause</button>
-      
-      <div style="margin-top: 10px;">
-        <span id="currentTime">00:00</span> / <span id="duration">00:00</span>
-      </div>
-
-      <input type="range" id="seekbar" value="0" max="100">
-    </div>
-
-    <video autoplay muted loop playsinline>
-      <source src="https://uploadkon.ir/uploads/89e818_25VID-20250718-212050-031.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <p>
+      آرتور مورگان... مردی که در هیاهوی گلوله‌ها، خیانت‌ها و خون‌ریزی‌ها، به دنبال تکه‌ای از آرامش می‌گشت؛ آرامشی که هرگز نیافت.
+      <br><br>
+      او در دنیایی به دنیا آمد که بی‌رحم‌تر از آن بود که کودک یتیمی را در آغوش بگیرد. پدرش یک دزد بود، مادرش را زود از دست داد، و خیلی زود یاد گرفت که دنیا برای کسانی که مهربانند، رحم نمی‌کند. داچ او را به سرپرستی گرفت، به او یاد داد چطور زنده بماند... اما به بهای اینکه قلبش را آرام آرام سنگ کند.
+      <br><br>
+      آرتور خودش را یک مرد بد می‌دانست. کسی که کارهای کثیف باند را بی‌هیچ تردیدی انجام می‌داد. اما پشت آن نگاه سرد و بی‌احساس، قلبی دفن‌شده بود؛ قلبی که هنوز برای عشق، برای دوست‌داشتن، برای بخشیدن می‌تپید.
+      <br><br>
+      بیماری سل نه‌تنها بدنش را خورد، بلکه ذهنش را نیز باز کرد. هر سرفه، هر شب بیداری، تلنگری شد که او را از دنیای تاریک خود بیرون بکشد. شاید هنوز هم فرصتی برای رستگاری بود.
+      <br><br>
+      و او تلاش کرد... با درد، با خون، با نفس‌های آخرش. در نهایت، آرتور مُرد... اما نه مثل یک دزد. مثل یک مرد. مردی که در سکوت جان داد، اما صدایش در قلب میلیون‌ها نفر زنده ماند.
+    </p>
   </div>
 
-  <script>
-    const music = document.getElementById("bgMusic");
-    const seekbar = document.getElementById("seekbar");
-    const currentTime = document.getElementById("currentTime");
-    const duration = document.getElementById("duration");
+  <div class="audio-player">
+    <audio controls>
+      <source src="https://uploadkon.ir/uploads/eaf818_25may-i-stand-unshaken-banda-sonora-subtitulada-red-dead-redemption.mp3" type="audio/mpeg">
+      مرورگر شما از پخش‌کننده صوتی پشتیبانی نمی‌کند.
+    </audio>
+  </div>
 
-    function togglePlay() {
-      if (music.paused) {
-        music.play();
-      } else {
-        music.pause();
-      }
-    }
+  <div class="button-row">
+    <!-- My Telegram -->
+    <div class="btn-box">
+      <a href="http://t.me/ejmok" target="_blank">My Telegram</a>
+      <div>Click here</div>
+    </div>
 
-    function formatTime(seconds) {
-      const mins = Math.floor(seconds / 60);
-      const secs = Math.floor(seconds % 60);
-      return `${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
-    }
+    <!-- وسطی -->
+    <div class="btn-box">
+      <div style="font-weight: bold;">mti</div>
+      <div style="margin-top: 5px;">brother</div>
+    </div>
 
-    music.addEventListener("loadedmetadata", () => {
-      duration.textContent = formatTime(music.duration);
-      seekbar.max = Math.floor(music.duration);
-    });
+    <!-- Bot -->
+    <div class="btn-box">
+      <a href="http://t.me/Berlin_opBot" target="_blank">Bot</a>
+      <div>Click here</div>
+    </div>
+  </div>
 
-    music.addEventListener("timeupdate", () => {
-      currentTime.textContent = formatTime(music.currentTime);
-      seekbar.value = music.currentTime;
-    });
-
-    seekbar.addEventListener("input", () => {
-      music.currentTime = seekbar.value;
-    });
-  </script>
 </body>
 </html>
