--- a/index.html
+++ b/index.html
@@ -1,75 +1,131 @@
-<!DOCTYPE html>
-<html lang="fa" dir="rtl">
+https<!DOCTYPE html>
+<html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <title>Arthur Morgan</title>
+  <meta charset="UTF-8" />
+  <title>Berlin</title>
   <style>
     body {
-      background-color: #1a1a1a;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-image: url('https://uploadkon.ir/uploads/30bc18_253f0eae2b92ca589534c39a0b4b4104d2.jpg');
+      background-size: cover;
+      background-position: center;
       color: white;
-      font-family: 'Tahoma', sans-serif;
-      padding: 20px;
       text-align: center;
+      padding: 30px;
+      backdrop-filter: brightness(0.5);
     }
-    .story-box {
-      background-color: #2c2c2c;
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 20px;
-      line-height: 2;
+
+    h1 {
+      font-size: 48px;
+      margin-bottom: 10px;
+      letter-spacing: 2px;
     }
-    .audio-player {
-      margin-top: 30px;
-    }
-    audio {
-      width: 100%;
-      max-width: 500px;
-    }
-    .button-row {
+
+    .button-container {
+      margin: 20px 0;
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 30px;
     }
-    .btn-box {
-      background-color: #007bff;
+
+    .btn {
+      background-color: rgba(0, 0, 0, 0.6);
       color: white;
-      width: 150px;
-      height: 100px;
-      border-radius: 10px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-    .btn-box a {
-      color: white;
+      border: 1px solid #ccc;
+      padding: 12px 24px;
       text-decoration: none;
       font-weight: bold;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+
+    .btn:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+
+    .mti-box {
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white;
+      border: 1px solid #ccc;
+      padding: 12px 24px;
+      border-radius: 8px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+    }
+
+    .mti-box small {
+      font-weight: normal;
+      font-size: 12px;
+      margin-top: 4px;
+      color: #ccc;
+    }
+
+    .section {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      margin-top: 20px;
+      border-radius: 12px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.8;
+      font-size: 16px;
+      text-align: justify;
+    }
+
+    .audio-player {
+      margin-top: 40px;
+    }
+
+    .audio-player button {
+      padding: 10px 20px;
+      border: none;
+      background-color: #444;
+      color: white;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-bottom: 10px;
+    }
+
+    .progress-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      color: #ddd;
+    }
+
+    .progress-bar {
+      width: 300px;
     }
   </style>
 </head>
 <body>
 
-  <h1>Arthur Morgan</h1>
+  <h1>BERLIN</h1>
 
-  <div class="story-box">
-    <p>
-      Arthur Morgan... a man who, amidst bullets, betrayals, and bloodshed, sought a fragment of peace; a peace he never found.
-      <br><br>
-      He was born into a world too cruel to embrace an orphaned child. His father was a thief, his mother died early, and he soon learned that the world has no mercy for the kind-hearted. Dutch adopted him, taught him how to survive… but at the cost of slowly hardening his heart.
-      <br><br>
-      Arthur saw himself as a bad man. Someone who carried out the gang's dirty work without hesitation. But behind that cold, emotionless stare, there lay a buried heart—a heart that still beat for love, for caring, for forgiveness.
-      <br><br>
-      Tuberculosis didn’t just eat away at his body—it awakened his mind. Every cough, every sleepless night, was a wake-up call pulling him out of his dark world. Maybe, just maybe, redemption was still possible.
-      <br><br>
-      And he tried… with pain, with blood, with his final breaths. In the end, Arthur died… but not like a thief. Like a man. A man who passed in silence, but whose voice lives on in the hearts of millions.
-    </p>
+  <div class="button-container">
+    <a href="http://t.me/ejmok" target="_blank" class="btn">TELEGRAM<br>Click Here</a>
+    
+    <div class="mti-box">
+      MTI
+      <small>Brother</small>
+    </div>
+    
+    <a href="http://t.me/Berlin_opBot" target="_blank" class="btn">BOT<br>Click Here</a>
+  </div>
 
-    <hr style="margin: 30px 0; border-color: #444;">
+  <div class="section">
+    <p><strong>Arthur Morgan was a man born into chaos, raised by outlaws, and shaped by the cruel realities of the American frontier. He wasn’t just an outlaw—he was a soul buried under layers of regret, violence, and fading loyalty. He called himself a bad man, but behind the guns and gritted teeth was a heart still capable of redemption. Diagnosed with tuberculosis, he began to see life differently. Every cough reminded him of his mortality. He tried to right his wrongs—not with grand gestures, but with quiet acts of honor. And in the end, Arthur didn’t die as a criminal. He died as a man. A man whose story echoed far beyond his last breath.</strong></p>
+  </div>
 
-    <p>
+  <div class="section">
+    <p><strong>
       آرتور مورگان... مردی که در هیاهوی گلوله‌ها، خیانت‌ها و خون‌ریزی‌ها، به دنبال تکه‌ای از آرامش می‌گشت؛ آرامشی که هرگز نیافت.
       <br><br>
       او در دنیایی به دنیا آمد که بی‌رحم‌تر از آن بود که کودک یتیمی را در آغوش بگیرد. پدرش یک دزد بود، مادرش را زود از دست داد، و خیلی زود یاد گرفت که دنیا برای کسانی که مهربانند، رحم نمی‌کند. داچ او را به سرپرستی گرفت، به او یاد داد چطور زنده بماند... اما به بهای اینکه قلبش را آرام آرام سنگ کند.
@@ -79,35 +135,53 @@
       بیماری سل نه‌تنها بدنش را خورد، بلکه ذهنش را نیز باز کرد. هر سرفه، هر شب بیداری، تلنگری شد که او را از دنیای تاریک خود بیرون بکشد. شاید هنوز هم فرصتی برای رستگاری بود.
       <br><br>
       و او تلاش کرد... با درد، با خون، با نفس‌های آخرش. در نهایت، آرتور مُرد... اما نه مثل یک دزد. مثل یک مرد. مردی که در سکوت جان داد، اما صدایش در قلب میلیون‌ها نفر زنده ماند.
-    </p>
+    </strong></p>
   </div>
 
   <div class="audio-player">
-    <audio controls>
-      <source src="https://uploadkon.ir/uploads/eaf818_25may-i-stand-unshaken-banda-sonora-subtitulada-red-dead-redemption.mp3" type="audio/mpeg">
-      مرورگر شما از پخش‌کننده صوتی پشتیبانی نمی‌کند.
-    </audio>
-  </div>
-
-  <div class="button-row">
-    <!-- My Telegram -->
-    <div class="btn-box">
-      <a href="http://t.me/ejmok" target="_blank">My Telegram</a>
-      <div>Click here</div>
-    </div>
-
-    <!-- وسطی -->
-    <div class="btn-box">
-      <div style="font-weight: bold;">mti</div>
-      <div style="margin-top: 5px;">brother</div>
-    </div>
-
-    <!-- Bot -->
-    <div class="btn-box">
-      <a href="http://t.me/Berlin_opBot" target="_blank">Bot</a>
-      <div>Click here</div>
+    <audio id="audio" src="https://uploadkon.ir/uploads/eaf818_25may-i-stand-unshaken-banda-sonora-subtitulada-red-dead-redemption.mp3"></audio>
+    <button onclick="togglePlay()">▶️ Play / ⏸ Pause</button>
+    <div class="progress-container">
+      <span id="current">0:00</span>
+      <input type="range" id="progress" class="progress-bar" value="0" max="100" step="1" onchange="seekAudio()" />
+      <span id="duration">0:00</span>
     </div>
   </div>
+
+  <script>
+    const audio = document.getElementById('audio');
+    const progress = document.getElementById('progress');
+    const current = document.getElementById('current');
+    const duration = document.getElementById('duration');
+
+    function togglePlay() {
+      if (audio.paused) {
+        audio.play();
+      } else {
+        audio.pause();
+      }
+    }
+
+    audio.addEventListener('loadedmetadata', () => {
+      progress.max = Math.floor(audio.duration);
+      duration.textContent = formatTime(audio.duration);
+    });
+
+    audio.addEventListener('timeupdate', () => {
+      progress.value = Math.floor(audio.currentTime);
+      current.textContent = formatTime(audio.currentTime);
+    });
+
+    function seekAudio() {
+      audio.currentTime = progress.value;
+    }
+
+    function formatTime(sec) {
+      const minutes = Math.floor(sec / 60);
+      const seconds = Math.floor(sec % 60).toString().padStart(2, '0');
+      return `${minutes}:${seconds}`;
+    }
+  </script>
 
 </body>
-</html>
+</html>.
