--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-https<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fa">
 <head>
   <meta charset="UTF-8" />
@@ -30,7 +30,7 @@ https<!DOCTYPE html>
     }
 
     .btn {
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgba(0, 0, 255, 0.6);
       color: white;
       border: 1px solid #ccc;
       padding: 12px 24px;
@@ -38,30 +38,14 @@ https<!DOCTYPE html>
       font-weight: bold;
       border-radius: 8px;
       transition: background 0.3s;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 120px;
     }
 
     .btn:hover {
       background-color: rgba(255, 255, 255, 0.2);
-    }
-
-    .mti-box {
-      background-color: rgba(0, 0, 0, 0.6);
-      color: white;
-      border: 1px solid #ccc;
-      padding: 12px 24px;
-      border-radius: 8px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-weight: bold;
-    }
-
-    .mti-box small {
-      font-weight: normal;
-      font-size: 12px;
-      margin-top: 4px;
-      color: #ccc;
     }
 
     .section {
@@ -103,6 +87,24 @@ https<!DOCTYPE html>
     .progress-bar {
       width: 300px;
     }
+
+    .mti-box {
+      background-color: rgba(0, 0, 255, 0.6);
+      border: 1px solid #ccc;
+      padding: 12px 24px;
+      font-weight: bold;
+      border-radius: 8px;
+      width: 120px;
+    }
+
+    .mti-title {
+      font-size: 18px;
+    }
+
+    .mti-sub {
+      font-size: 14px;
+      margin-top: 4px;
+    }
   </style>
 </head>
 <body>
@@ -113,10 +115,10 @@ https<!DOCTYPE html>
     <a href="http://t.me/ejmok" target="_blank" class="btn">TELEGRAM<br>Click Here</a>
     
     <div class="mti-box">
-      MTI
-      <small>Brother</small>
+      <div class="mti-title">MTI</div>
+      <div class="mti-sub">Brother</div>
     </div>
-    
+
     <a href="http://t.me/Berlin_opBot" target="_blank" class="btn">BOT<br>Click Here</a>
   </div>
 
@@ -184,4 +186,4 @@ https<!DOCTYPE html>
   </script>
 
 </body>
-</html>.
+</html>
