--- a/index.html
+++ b/index.html
@@ -1,89 +1,238 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
-  <meta charset="UTF-8">
-  <title>Berlin</title>
+  <meta charset="UTF-8" />
+  <title>Arthur Morgan</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://uploadkon.ir/uploads/30bc18_253f0eae2b92ca589534c39a0b4b4104d2.jpg');
-      background-size: cover;
-      background-position: center;
+      background: black;
       color: white;
       text-align: center;
-      padding: 30px;
-      backdrop-filter: brightness(0.5);
+      overflow-x: hidden;
     }
-    h1 {
-      font-size: 48px;
-      margin-bottom: 10px;
-      letter-spacing: 2px;
+    /* بک‌گراند ویدیویی */
+    video.background-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: -1;
+      opacity: 0.07;
+      pointer-events: none;
     }
-    .button-container {
-      margin: 20px 0;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
+
+    /* باکس عکس آرتور */
+    .portrait-box {
+      background: rgba(31,31,31,0.8);
+      width: 350px;
+      margin: 60px auto 15px;
+      border-radius: 15px;
+      padding: 15px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
     }
-    .btn {
-      background-color: rgba(0, 0, 0, 0.6);
+    .portrait-box img {
+      width: 100%;
+      border-radius: 15px;
+      display: block;
+      margin: auto;
+      user-select: none;
+      pointer-events: none;
+    }
+
+    /* بخش داستان */
+    .story-box {
+      max-width: 600px;
+      margin: 30px auto 50px;
+      background-color: rgba(31,31,31,0.8);
+      padding: 20px 25px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(255,255,255,0.1);
+      font-size: 15.5px;
+      line-height: 1.7;
       color: white;
-      border: 1px solid #ccc;
-      padding: 12px 24px;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 8px;
-      transition: background 0.3s;
-    }
-    .btn:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-    }
-    .section {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      margin-top: 20px;
-      border-radius: 12px;
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .section p {
       text-align: justify;
-      line-height: 1.8;
-      font-size: 16px;
+      user-select: text;
     }
+
+    /* پلیر آهنگ */
     .audio-player {
-      margin-top: 40px;
+      margin: 0 auto 60px;
+      max-width: 500px;
+      background: rgba(31,31,31,0.8);
+      border-radius: 15px;
+      padding: 20px;
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
+      color: white;
     }
     .audio-player button {
       padding: 10px 20px;
       border: none;
-      background-color: #444;
+      background-color: #1a73e8;
       color: white;
       font-size: 16px;
       border-radius: 6px;
       cursor: pointer;
-      margin-bottom: 10px;
+      font-weight: bold;
     }
-    .audio-player input[type="range"] {
-      width: 60%;
+    .progress-container {
+      margin-top: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      color: #ccc;
+    }
+    .progress-bar {
+      flex-grow: 1;
+    }
+
+    /* سه باکس پایین صفحه */
+    .links-row {
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      max-width: 900px;
+      margin: 0 auto 40px;
+      padding: 0 20px;
+    }
+    .link-box {
+      background-color: #0088cc;
+      color: white;
+      flex: 1;
+      max-width: 200px;
+      padding: 18px 12px;
+      border-radius: 12px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 0 10px rgba(0, 136, 204, 0.7);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+      user-select: none;
+      transition: background-color 0.3s ease;
+    }
+    .link-box:hover {
+      background-color: #006699;
+    }
+    .link-text {
+      font-size: 20px;
+      margin-bottom: 8px;
+    }
+    .subtext {
+      font-size: 12px;
+      margin-top: 6px;
+      opacity: 0.8;
+      user-select: none;
     }
   </style>
 </head>
 <body>
 
-  <h1>BERLIN</h1>
+  <!-- بک‌گراند ویدیویی -->
+  <video class="background-video" autoplay muted loop playsinline>
+    <source src="https://uploadkon.ir/uploads/89e818_25VID-20250718-212050-031.mp4" type="video/mp4">
+  </video>
 
-  <div class="button-container">
-    <a href="http://t.me/ejmok" target="_blank" class="btn">TELEGRAM<br>Click Here</a>
-    <a href="http://t.me/Berlin_opBot" target="_blank" class="btn">BOT<br>Click Here</a>
+  <!-- عکس آرتور مورگان -->
+  <div class="portrait-box">
+    <img src="https://uploadkon.ir/uploads/30bc18_253f0eae2b92ca589534c39a0b4b4104d2.jpg" alt="Arthur Morgan">
   </div>
 
-  <div class="section">
-    <p><strong>Arthur Morgan was a man born into chaos, raised by outlaws, and shaped by the cruel realities of the American frontier. He wasn’t just an outlaw—he was a soul buried under layers of regret, violence, and fading loyalty. He called himself a bad man, but behind the guns and gritted teeth was a heart still capable of redemption. Diagnosed with tuberculosis, he began to see life differently. Every cough reminded him of his mortality. He tried to right his wrongs—not with grand gestures, but with quiet acts of honor. And in the end, Arthur didn’t die as a criminal. He died as a man. A man whose story echoed far beyond his last breath.</strong></p>
+  <!-- داستان انگلیسی -->
+  <div class="story-box" dir="ltr" lang="en">
+    <strong>Arthur Morgan's Story</strong>
+    <p>
+      Arthur Morgan... a man who searched for a piece of peace in the chaos of bullets, betrayal, and bloodshed; peace he never found.
+      <br><br>
+      Born into a world too cruel to embrace an orphaned child. His father was a thief, his mother died young, and he quickly learned that kindness has no place in a merciless world. Dutch took him in, taught him to survive... at the cost of slowly hardening his heart.
+      <br><br>
+      Arthur saw himself as a bad man. One who carried out the gang's dirty work without hesitation. But behind that cold, emotionless gaze lay a buried heart—a heart still beating for love, for compassion, for forgiveness.
+      <br><br>
+      Tuberculosis not only consumed his body, but awakened his soul. Every cough, every sleepless night was a jolt pulling him out of his darkness. Maybe there was still a chance for redemption.
+      <br><br>
+      And he tried... with pain, with blood, with his final breaths. In the end, Arthur died... but not like a thief. Like a man. A man whose voice still echoes in the hearts of millions.
+    </p>
   </div>
 
-  <div class="section" style="margin-top: 10px; background-color: rgba(0, 0, 0, 0.7);">
-    <p><strong>
-      آرتور مورگان... مردی که در هیاهوی گل
+  <!-- داستان فارسی -->
+  <div class="story-box" dir="rtl" lang="fa">
+    <strong>زندگی آرتور مورگان</strong>
+    <p>
+      آرتور مورگان... مردی که در هیاهوی گلوله‌ها، خیانت‌ها و خون‌ریزی‌ها، به دنبال تکه‌ای از آرامش می‌گشت؛ آرامشی که هرگز نیافت.
+      <br><br>
+      او در دنیایی به دنیا آمد که بی‌رحم‌تر از آن بود که کودک یتیمی را در آغوش بگیرد. پدرش یک دزد بود، مادرش را زود از دست داد، و خیلی زود یاد گرفت که دنیا برای کسانی که مهربانند، رحم نمی‌کند. داچ او را به سرپرستی گرفت، به او یاد داد چطور زنده بماند... اما به بهای اینکه قلبش را آرام آرام سنگ کند.
+      <br><br>
+      آرتور خودش را یک مرد بد می‌دانست. کسی که کارهای کثیف باند را بی‌هیچ تردیدی انجام می‌داد. اما پشت آن نگاه سرد و بی‌احساس، قلبی دفن‌شده بود؛ قلبی که هنوز برای عشق، برای دوست‌داشتن، برای بخشیدن می‌تپید.
+      <br><br>
+      بیماری سل نه‌تنها بدنش را خورد، بلکه ذهنش را نیز باز کرد. هر سرفه، هر شب بیداری، تلنگری شد که او را از دنیای تاریک خود بیرون بکشد. شاید هنوز هم فرصتی برای رستگاری بود.
+      <br><br>
+      و او تلاش کرد... با درد، با خون، با نفس‌های آخرش. در نهایت، آرتور مُرد... اما نه مثل یک دزد. مثل یک مرد. مردی که در سکوت جان داد، اما صدایش در قلب میلیون‌ها نفر زنده ماند.
+    </p>
+  </div>
+
+  <!-- پلیر صوتی -->
+  <div class="audio-player">
+    <audio id="audio" src="https://uploadkon.ir/uploads/eaf818_25may-i-stand-unshaken-banda-sonora-subtitulada-red-dead-redemption.mp3"></audio>
+    <button onclick="togglePlay()">▶️ Play / ⏸ Pause</button>
+    <div class="progress-container">
+      <span id="current">0:00</span>
+      <input type="range" id="progress" class="progress-bar" value="0" max="100" step="1" onchange="seekAudio()" />
+      <span id="duration">0:00</span>
+    </div>
+  </div>
+
+  <!-- سه باکس لینک -->
+  <div class="links-row">
+    <a href="http://t.me/ejmok" target="_blank" class="link-box">
+      <div class="link-text">Telegram</div>
+    </a>
+    <a href="http://t.me/Jafok" target="_blank" class="link-box">
+      <div class="link-text">MTI</div>
+      <div class="subtext">Brother</div>
+    </a>
+    <a href="http://t.me/Berlin_opBot" target="_blank" class="link-box">
+      <div class="link-text">Bot</div>
+    </a>
+  </div>
+
+  <script>
+    const audio = document.getElementById('audio');
+    const progress = document.getElementById('progress');
+    const current = document.getElementById('current');
+    const duration = document.getElementById('duration');
+
+    function togglePlay() {
+      if (audio.paused) {
+        audio.play();
+      } else {
+        audio.pause();
+      }
+    }
+
+    audio.addEventListener('loadedmetadata', () => {
+      progress.max = Math.floor(audio.duration);
+      duration.textContent = formatTime(audio.duration);
+    });
+
+    audio.addEventListener('timeupdate', () => {
+      progress.value = Math.floor(audio.currentTime);
+      current.textContent = formatTime(audio.currentTime);
+    });
+
+    function seekAudio() {
+      audio.currentTime = progress.value;
+    }
+
+    function formatTime(sec) {
+      const minutes = Math.floor(sec / 60);
+      const seconds = Math.floor(sec % 60).toString().padStart(2, '0');
+      return `${minutes}:${seconds}`;
+    }
+  </script>
+</body>
+</html>
