--- a/Berlin.html
+++ b/Berlin.html
@@ -1,158 +1,163 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="fa">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Berlin & MTI</title>
+  <title>Arthur Morgan & Ellie</title>
   <style>
-    * {
+    body {
       margin: 0;
-      padding: 0;
-      box-sizing: border-box;
       font-family: Arial, sans-serif;
-    }
-    body, html {
-      height: 100%;
-      overflow: hidden;
-    }
-    .nav {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      background: rgba(0, 0, 0, 0.8);
-      padding: 10px 0;
-      z-index: 10;
-    }
-    .nav button {
-      background: none;
+      background: black;
       color: white;
-      border: none;
-      font-size: 20px;
-      margin: 0 15px;
-      cursor: pointer;
-    }
-    section {
-      width: 100%;
-      height: 100vh;
-      display: none;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-    section.active {
-      display: block;
-    }
-    .berlin {
-      background: url('https://uploadkon.ir/uploads/6de919_25VID-20250719-124645-544.mp4') no-repeat center center/cover;
-    }
-    .berlin video {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -1;
-    }
-    .mti video {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -1;
-    }
-    .content {
-      position: relative;
-      z-index: 1;
-      text-align: center;
-      color: white;
+      overflow-x: hidden;
       padding: 20px;
     }
-    .photo {
-      width: 300px;
-      border-radius: 20px;
-      margin: 20px auto;
-    }
-    .audio-player {
-      margin: 20px auto;
-    }
-    .box-links {
+    .container {
       display: flex;
+      gap: 40px;
+      max-width: 1200px;
+      margin: 0 auto;
       justify-content: center;
-      margin-top: 30px;
-      gap: 15px;
     }
-    .box {
-      background: #007BFF;
-      color: white;
-      padding: 15px 25px;
-      border-radius: 10px;
-      font-size: 18px;
-      text-decoration: none;
+    .column {
+      flex: 1;
+      background: rgba(31,31,31,0.8);
+      border-radius: 15px;
+      padding: 20px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
+      max-width: 550px;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-    .box small {
-      font-size: 12px;
-      opacity: 0.8;
+    .portrait {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      margin-bottom: 15px;
+      width: 100%;
     }
-    .bio-box {
-      background: rgba(0, 0, 0, 0.6);
-      margin: 20px auto;
-      padding: 15px;
-      max-width: 500px;
+    .portrait img {
+      width: 100px;
+      height: auto;
       border-radius: 15px;
+      user-select: none;
+      pointer-events: none;
+    }
+    .portrait h2 {
+      margin: 0;
+      font-size: 24px;
+      flex-grow: 1;
+      text-align: left;
+      color: #f0f0f0;
+    }
+    .story {
+      font-size: 14px;
+      line-height: 1.6;
+      text-align: justify;
+      margin-bottom: 15px;
+      width: 100%;
+    }
+    .story.en {
+      direction: ltr;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #ccc;
+      margin-bottom: 25px;
+    }
+    .story.fa {
+      direction: rtl;
+      color: white;
+    }
+    .audio-player {
+      margin-top: 10px;
+      width: 100%;
+      text-align: center;
+    }
+    .audio-player audio {
+      width: 100%;
+      outline: none;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="nav">
-    <button onclick="showSection('berlin')">Berlin</button>
-    <button onclick="showSection('mti')">MTI</button>
-  </div>  <section id="berlin" class="active">
-    <video autoplay muted loop>
-      <source src="https://uploadkon.ir/uploads/6de919_25VID-20250719-124645-544.mp4" type="video/mp4" />
-    </video>
-    <div class="content">
-      <img class="photo" src="https://uploadkon.ir/uploads/04a019_256051b4da672df5e54b857989133ff16f.jpg" alt="Arthur Morgan" />
-      <div class="audio-player">
-        <audio controls>
-          <source src="https://uploadkon.ir/uploads/eaf818_25may-i-stand-unshaken-banda-sonora-subtitulada-red-dead-redemption.mp3" type="audio/mp3">
-        </audio>
+
+  <div class="container">
+    <!-- Arthur Morgan Column -->
+    <div class="column" lang="fa" dir="rtl">
+      <div class="portrait">
+        <img src="https://uploadkon.ir/uploads/30bc18_253f0eae2b92ca589534c39a0b4b4104d2.jpg" alt="Arthur Morgan" />
+        <h2>زندگی‌نامه آرتور مورگان</h2>
       </div>
-      <div class="bio-box">
-        <p style="font-weight: bold;">He was a man who lived in the shadows of his past, wandering through a world that never truly welcomed him. A heart burdened with regret, but still beating for a chance at redemption.</p>
-        <p>او مردی بود که در سایه‌های گذشته‌اش زندگی می‌کرد، سرگردان در دنیایی که هرگز واقعاً او را نپذیرفت. قلبی آکنده از پشیمانی، اما هنوز تپنده برای فرصتی دوباره برای رستگاری.</p>
+      <div class="story en">
+        <strong>Arthur Morgan's Story</strong>
+        <p>
+          Arthur Morgan... a man who searched for a piece of peace in the chaos of bullets, betrayal, and bloodshed; peace he never found.
+          <br><br>
+          Born into a world too cruel to embrace an orphaned child. His father was a thief, his mother died young, and he quickly learned that kindness has no place in a merciless world. Dutch took him in, taught him to survive... at the cost of slowly hardening his heart.
+          <br><br>
+          Arthur saw himself as a bad man. One who carried out the gang's dirty work without hesitation. But behind that cold, emotionless gaze lay a buried heart—a heart still beating for love, for compassion, for forgiveness.
+          <br><br>
+          Tuberculosis not only consumed his body, but awakened his soul. Every cough, every sleepless night was a jolt pulling him out of his darkness. Maybe there was still a chance for redemption.
+          <br><br>
+          And he tried... with pain, with blood, with his final breaths. In the end, Arthur died... but not like a thief. Like a man. A man whose voice still echoes in the hearts of millions.
+        </p>
       </div>
-      <div class="box-links">
-        <a href="http://t.me/ejmok" class="box" target="_blank">Telegram</a>
-        <a href="http://t.me/Berlin_opBot" class="box" target="_blank">Bot</a>
-        <a href="http://t.me/Jafok" class="box" target="_blank">MTI <small>Brother</small></a>
-      </div>
-    </div>
-  </section>  <section id="mti">
-    <video autoplay muted loop>
-      <source src="https://uploadkon.ir/uploads/6de919_25VID-20250719-124645-544.mp4" type="video/mp4" />
-    </video>
-    <div class="content">
-      <img class="photo" src="https://uploadkon.ir/uploads/acab19_256051b4da672df5e54b857989133ff16f.jpg" alt="Ellie" />
-      <div class="audio-player">
-        <audio controls>
-          <source src="https://uploadkon.ir/uploads/9d9519_2503-The-Last-of-Us.mp3" type="audio/mp3">
-        </audio>
-      </div>
-      <div class="bio-box">
-        <p style="font-weight: bold;">She was a child forced to become a warrior. Her innocence lost in a world where survival meant sacrifice, and every step forward meant leaving someone behind.</p>
-        <p>او کودکی بود که مجبور شد جنگجو شود. معصومیتش را در جهانی از دست داد که بقا به معنای فداکاری بود و هر قدم به جلو یعنی پشت سر گذاشتن کسی.</p>
-      </div>
-      <div class="box-links">
-        <a href="http://t.me/Jafok" class="box" target="_blank">Telegram</a>
+      <div class="story fa">
+        <strong>زندگی آرتور مورگان</strong>
+        <p>
+          آرتور مورگان... مردی که در هیاهوی گلوله‌ها، خیانت‌ها و خون‌ریزی‌ها، به دنبال تکه‌ای از آرامش می‌گشت؛ آرامشی که هرگز نیافت.
+          <br><br>
+          او در دنیایی به دنیا آمد که بی‌رحم‌تر از آن بود که کودک یتیمی را در آغوش بگیرد. پدرش یک دزد بود، مادرش را زود از دست داد، و خیلی زود یاد گرفت که دنیا برای کسانی که مهربانند، رحم نمی‌کند. داچ او را به سرپرستی گرفت، به او یاد داد چطور زنده بماند... اما به بهای اینکه قلبش را آرام آرام سنگ کند.
+          <br><br>
+          آرتور خودش را یک مرد بد می‌دانست. کسی که کارهای کثیف باند را بی‌هیچ تردیدی انجام می‌داد. اما پشت آن نگاه سرد و بی‌احساس، قلبی دفن‌شده بود؛ قلبی که هنوز برای عشق، برای دوست‌داشتن، برای بخشیدن می‌تپید.
+          <br><br>
+          بیماری سل نه‌تنها بدنش را خورد، بلکه ذهنش را نیز باز کرد. هر سرفه، هر شب بیداری، تلنگری شد که او را از دنیای تاریک خود بیرون بکشد. شاید هنوز هم فرصتی برای رستگاری بود.
+          <br><br>
+          و او تلاش کرد... با درد، با خون، با نفس‌های آخرش. در نهایت، آرتور مُرد... اما نه مثل یک دزد. مثل یک مرد. مردی که در سکوت جان داد، اما صدایش در قلب میلیون‌ها نفر زنده ماند.
+        </p>
       </div>
     </div>
-  </section>  <script>
-    function showSection(id) {
-      document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
-    }
-  </script></body>
+
+    <!-- Ellie Column -->
+    <div class="column" lang="fa" dir="rtl">
+      <div class="portrait">
+        <img src="https://uploadkon.ir/uploads/acab19_256051b4da672df5e54b857989133ff16f.jpg" alt="Ellie" />
+        <h2>زندگی‌نامه الی</h2>
+      </div>
+      <div class="story en">
+        <strong>Ellie's Story</strong>
+        <p>
+          Ellie... a girl who looked at life with pain and hope in a devastated world. She was someone who resisted hardships and tried to rebuild a broken world.
+          <br><br>
+          Ellie's life was full of hard and complex challenges; but she never let her hope for the future fade. Love, friendship, and fighting for justice lived in her heart.
+          <br><br>
+          With unmatched courage and strength, she searched for meaning in life and freedom from her past nightmares.
+          <br><br>
+          The music she lived with was a melody of pain and beauty; a voice that touched the hearts of listeners and took them to another world.
+          <br><br>
+          This is Ellie’s story; a girl who stood against all hardships and still stands strong.
+        </p>
+      </div>
+      <div class="story fa">
+        <strong>زندگی الی</strong>
+        <p>
+          الی... دختری که در جهانی ویران شده، با درد و امیدی به زندگی می‌نگریست. او کسی بود که در برابر سختی‌ها مقاومت کرد و تلاش نمود برای بازسازی دنیایی که به ویرانی کشیده شده بود.
+          <br><br>
+          زندگی الی پر از چالش‌های سخت و پیچیده بود؛ اما هرگز اجازه نداد که امیدش به آینده کم رنگ شود. عشق، دوستی، و مبارزه برای عدالت در قلب او زنده بود.
+          <br><br>
+          او با شجاعت و قدرتی بی‌همتا، به دنبال یافتن معنای زندگی و رهایی از کابوس‌های گذشته‌اش بود.
+          <br><br>
+          موسیقی‌ای که با آن زندگی می‌کرد، نغمه‌ای از درد و زیبایی بود؛ صدایی که به قلب شنونده‌ها می‌نشست و آنها را به دنیایی دیگر می‌برد.
+          <br><br>
+          این داستان الی است؛ دختری که در برابر همه سختی‌ها ایستاد و همچنان می‌ایستد.
+        </p>
+      </div>
+      <div class="audio-player">
+        <audio controls src="https://uploadkon.ir/uploads/1a1319_2503-The-Last-of-Us.mp3"></audio>
+      </div>
+    </div>
+  </div>
+
+</body>
 </html>
